--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 docs/source
 /data/
 
+# Test artifacts
+tests/data/
+tests/outputs/
+
 # From https://raw.githubusercontent.com/github/gitignore/main/Python.gitignore
 
 # Byte-compiled / optimized / DLL files
