--- a/pyproject.toml
+++ b/pyproject.toml
@@ -151,6 +151,10 @@ ignore = [
   "E501",
   # DoNotAssignLambda
   "E731",
+  # Random not suitable for cryptographic purposes
+  "S311",
+  # Return the negated condition directly
+  "SIM103",
 ]
 
 [tool.ruff.lint.per-file-ignores]
@@ -168,9 +172,10 @@ preview = true
 
 
 [tool.pyright]
+reportUnknownLambdaType = false
+
 exclude = [".venv", "tests"]
 venv = ".venv"
-
 # Ignore dev-only dependencies that are not used in main package code
 [tool.deptry]
 # Exclude directories that shouldn't be analyzed
@@ -203,3 +208,6 @@ per_rule_ignores.DEP002 = [
   "tomli",
 ]
 per_rule_ignores.DEP003 = ["typing_extensions"]
+
+[dependency-groups]
+dev = []
