--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,8 @@ dependencies = [
   "asyncio>=4.0.0",
   "httpx>=0.28.1",
   "aiofiles>=25.1.0",
+  "types-aioboto3[essential,s3]>=15.5.0",
+  "aioboto3>=15.5.0",
 ]
 
 [project.urls]
@@ -217,4 +219,5 @@ per_rule_ignores.DEP003 = ["typing_extensions"]
 [dependency-groups]
 dev = [
     "pytest-recording>=0.13.4",
+    "useful-types>=0.2.1",
 ]
