--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Run tests
-        run: uv run python -m pytest tests
+        run: uv run python -m --disable-recording pytest tests
 
       - name: Check typing
         run: uv run mypy
