--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,7 @@ repos:
         args: [--fix]
       # Run the formatter.
       - id: ruff-format
+        args: [--diff]
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v6.0.0
