--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
   "aioboto3>=15.5.0",
   "xmltodict>=1.0.2",
   "useful-types>=0.2.1",
+  "tenacity>=9.1.2",
 ]
 
 [project.urls]
