Add shfmt and dprint for shell/markdown formatting
- Add shfmt pre-commit hook and VS Code extension (2-space indent)
- Add dprint pre-commit hook and VS Code extension (80 char line width)
- Add .markdownlint.json to disable rules that overlap with dprint
- Format all shell scripts and markdown files

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,7 +32,10 @@
             "extensions": [
                 "ms-python.python",
                 "nefrob.vscode-just-syntax",
-                "tamasfe.even-better-toml"
+                "tamasfe.even-better-toml",
+                "davidanson.vscode-markdownlint",
+                "foxundermoon.shell-format",
+                "dprint.dprint"
             ],
             // Configure tool-specific settings.
             "settings": {
@@ -43,6 +46,15 @@
                 "python.testing.pytestPath": "/workspaces/buildstock-fetch/.venv/bin/pytest",
                 "terminal.integrated.env.linux": {
                     "PATH": "/workspaces/buildstock-fetch/.venv/bin:${env:PATH}"
+                },
+                "shellformat.flag": "-i 2",
+                "[shellscript]": {
+                    "editor.defaultFormatter": "foxundermoon.shell-format",
+                    "editor.formatOnSave": true
+                },
+                "[markdown]": {
+                    "editor.defaultFormatter": "dprint.dprint",
+                    "editor.formatOnSave": true
                 }
             }
         }
