--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,62 +1,63 @@
-// For format details, see https://aka.ms/devcontainer.json. For config options, see the
-// README at: https://github.com/devcontainers/templates/tree/main/src/python
 {
-    "name": "buildstock-fetch",
-    "image": "mcr.microsoft.com/devcontainers/python:1-3.12-bullseye",
-
-    "features": {
-        // Install just
-        "ghcr.io/guiyomh/features/just:0.1.0": {
-            "version": "1.40.0"
-        },
-        // Install AWS CLI
-        "ghcr.io/devcontainers/features/aws-cli:1": {}
-    },
-
-    "initializeCommand": "mkdir -p ${localEnv:HOME}/.aws",  // Container won't start if .aws dir is missing
-    "mounts": [
-        "source=${localEnv:HOME}/.aws,target=/home/vscode/.aws,type=bind,consistency=cached"
-    ],
-
-    "remoteEnv": {
-        "AWS_REGION": "us-west-2"
-    },
-
-    // Use 'postCreateCommand' to run commands after the container is created.
-    // This is used to install post-commit hooks, uv, virtualenv, and dependencies.
-    "postCreateCommand": "./.devcontainer/postCreateCommand.sh",
-
-    "customizations": {
-        "vscode": {
-            // Install VS Code extensions.
-            "extensions": [
-                "ms-python.python",
-                "nefrob.vscode-just-syntax",
-                "tamasfe.even-better-toml",
-                "davidanson.vscode-markdownlint",
-                "foxundermoon.shell-format",
-                "dprint.dprint"
-            ],
-            // Configure tool-specific settings.
-            "settings": {
-                "python.testing.pytestArgs": ["tests"],
-                "python.testing.unittestEnabled": false,
-                "python.testing.pytestEnabled": true,
-                "python.defaultInterpreterPath": "/workspaces/buildstock-fetch/.venv/bin/python",
-                "python.testing.pytestPath": "/workspaces/buildstock-fetch/.venv/bin/pytest",
-                "terminal.integrated.env.linux": {
-                    "PATH": "/workspaces/buildstock-fetch/.venv/bin:${env:PATH}"
-                },
-                "shellformat.flag": "-i 2",
-                "[shellscript]": {
-                    "editor.defaultFormatter": "foxundermoon.shell-format",
-                    "editor.formatOnSave": true
-                },
-                "[markdown]": {
-                    "editor.defaultFormatter": "dprint.dprint",
-                    "editor.formatOnSave": true
-                }
-            }
-        }
+  "name": "buildstock-fetch",
+  "image": "mcr.microsoft.com/devcontainers/base:ubuntu-24.04",
+  "features": {
+    "ghcr.io/guiyomh/features/just:0.1.0": { "version": "1.42.4" },
+    "ghcr.io/devcontainers/features/python:1": { "version": "os-provided" },
+    "ghcr.io/devcontainers/features/aws-cli:1": {},
+    "ghcr.io/nils-geistmann/devcontainers-features/zsh:0": {
+      "plugins": "git colored-man-pages colorize history zsh-autosuggestions fast-syntax-highlighting zsh-autocomplete",
+      "theme": "bira"
     }
+  },
+  "initializeCommand": "mkdir -p ${localEnv:HOME}/.aws",
+  "mounts": [
+    "source=${localEnv:HOME}/.aws,target=/home/vscode/.aws,type=bind,consistency=cached"
+  ],
+  "remoteEnv": {
+    "AWS_REGION": "us-west-2"
+  },
+  "postCreateCommand": "bash -c '.devcontainer/install-ohmyzsh-plugins.sh && .devcontainer/install-python-deps.sh && .devcontainer/install-prek.sh && .devcontainer/install-prek-deps.sh'",
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "tombi-toml.tombi",
+        "nefrob.vscode-just-syntax",
+        "davidanson.vscode-markdownlint",
+        "christian-kohler.path-intellisense",
+        "ms-python.python",
+        "charliermarsh.ruff",
+        "astral-sh.ty",
+        "tekumara.typos-vscode",
+        "foxundermoon.shell-format",
+        "dprint.dprint"
+      ],
+      "settings": {
+        "python.defaultInterpreterPath": "/workspaces/buildstock-fetch/.venv/bin/python",
+        "python.terminal.activateEnvironment": false,
+        "python.testing.pytestArgs": ["tests"],
+        "python.testing.pytestPath": "/workspaces/buildstock-fetch/.venv/bin/pytest",
+        "python.testing.unittestEnabled": false,
+        "python.testing.pytestEnabled": true,
+        "ruff.nativeServer": "on",
+        "[python]": {
+          "editor.defaultFormatter": "charliermarsh.ruff",
+          "editor.formatOnSave": true,
+          "editor.codeActionsOnSave": {
+            "source.fixAll": "explicit",
+            "source.organizeImports": "explicit"
+          }
+        },
+        "shellformat.flag": "-i 2",
+        "[shellscript]": {
+          "editor.defaultFormatter": "foxundermoon.shell-format",
+          "editor.formatOnSave": true
+        },
+        "[markdown]": {
+          "editor.defaultFormatter": "dprint.dprint",
+          "editor.formatOnSave": true
+        }
+      }
+    }
+  }
 }
