--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
   "tenacity>=9.1.2",
   "async-timer>=1.1.6",
   "psutil>=7.2.1",
+  "cloudpathlib>=0.23.0",
 ]
 
 [project.urls]
